--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,15 +6,20 @@
 
     function init()
     {
+        width = 400
+        height = 400
+        renderCanvas = document.getElementById('render_canvas');
 
-        scene = new THREE.Scene(); ;;
-        camera = new THREE.PerspectiveCamera(60, window.innerWidth/window.innerHeight, 0.001, 1000);
+        scene = new THREE.Scene();
+        camera = new THREE.PerspectiveCamera(55, window.innerWidth/window.innerHeight, 0.001, 1000);
         renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
+
+
         document.body.appendChild(renderer.domElement);
 
-        var geometry = new THREE.CubeGeometry(1,1,1);
-        var material = new THREE.MeshBasicMaterial({color: 0x00ff00});
+        var geometry = new THREE.CubeGeometry(20,0.1,20);
+        var material = new THREE.MeshBasicMaterial({color: 0xaaaaaa});
         var cube = new THREE.Mesh(geometry, material);
         var directionalLight = new THREE.DirectionalLight( 0xffffff, 0.5 );
         directionalLight.position.set( 3, 5, 5 );
@@ -27,15 +32,20 @@
         cube.position.y = 0;
         cube.position.z = 0;
 
-        camera.position.x = 8;
-        camera.position.y = 8;
-        camera.position.z = 8;
-        camera.up.x = 0;
-        camera.up.y = 1;
-        camera.up.z = 0;
+//        camera.position.x = 8;
+  //      camera.position.y = 8;
+        camera.position.z = 9;
+        camera.position.y = 11;
+        camera.position.x = 4;
 
-         camera.lookAt(new THREE.Vector3(0,0,0));
-        //camera.lookAt(cube)
+//        camera.up.x = 0;
+//        camera.up.y = 1;
+//        camera.up.z = 0;
+
+//         camera.lookAt( new THREE.Vector3(5,0,5),
+ //                       new THREE.Vector3(0,0,0),
+  //                      new THREE.Vector3(0,1,0));
+        camera.lookAt(new THREE.Vector3(0, 2, 0))
     }
 
     function render()
@@ -46,9 +56,8 @@
 
     function onModelLoaded(res)
     {
-        document.write("LOADED!");
-        document.write(res.dae.scene.nodes.length);
-        document.write("AJAJAJA");
+        document.write("<p>LOADED!</p>");
+
         init();
 
         dae = res.scene;
@@ -61,7 +70,7 @@
         dae.position.z = 0.0;
 
         scene.add(dae);
-        camera.lookAt(dae);
+        //camera.lookAt(dae);
         render();
     }
 
