--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,38 @@
+
+
 <div>
     Authorized. ID: <%= session[:user_id] %>
 </div>
 <div>
-    <%= @books_list %>
+  <h1>Owned books:</h1>
+
+  <table>
+    <tr>
+      <th>Id</th>
+      <th>Title</th>
+      <th>Image</th>
+      <th>Pages</th>
+      <th>Rate</th>
+      <th>Author Id</th>
+      <th>Author Image</th>
+      <th>Author Small Image</th>
+    </tr>
+
+    <% @owned_books.each do |book| %>
+        <tr>
+          <td><%= book.book_id %></td>
+          <td><%= book.book_title %></td>
+          <td><%= book.book_image_url %></td>
+          <td><%= book.book_num_pages %></td>
+          <td><%= book.book_average_rating %></td>
+          <td><%= book.author_id %></td>
+          <td><%= book.author_image_url %></td>
+          <td><%= book.author_small_image_url %></td>
+        </tr>
+    <% end %>
+  </table>
+
+  <br />
 </div>
 
 <script>
@@ -10,10 +40,6 @@
 
     function init()
     {
-        width = 400
-        height = 400
-        renderCanvas = document.getElementById('render_canvas');
-
         scene = new THREE.Scene();
         camera = new THREE.PerspectiveCamera(55, window.innerWidth/window.innerHeight, 0.001, 1000);
         renderer = new THREE.WebGLRenderer({antialias:true});
@@ -63,8 +89,6 @@
 
     function onModelLoaded(res)
     {
-        document.write("<p>LOADED!</p>");
-
         init();
 
         dae = res.scene;
