--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div id="div_main">
 
 <div id="div_books_table">
-  <h1>Owned books:</h1>
+  <div class="title">your books</div>
 
   <table>
     <tr>
