--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,7 @@
           <th>Rate</th>
         </tr>
 
-        <% i=0; @owned_books.each do |book| %>
+        <% i=0; session[:owned_books].each do |book| %>
             <tr>
               <td><%= i; i = i+1  %></td>
               <td><%= book.book_title %></td>
