--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,30 +1,40 @@
+body
+{
+    background-color: #cfabbd;
+
+}
+
 #div_main
 {
     width:1000px;
     height:600px;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
 }
 
 #div_books_table
 {
+
     width:400px;
-    height:600px;
-    float:left;
-    background-color: #5ab163;
+    height:400px;
+    position: absolute;
+    top: 20px;
+    right:20px;
+    background-color: #53bd48;
     color: #000000;
     font: message-box;
 
     border: #000000;
     border-width: 2px;
-    border-style: dashed;
+    border-style: solid;
     overflow: auto;
 }
 
 #div_rendering_canvas
 {
-    width:550px;
-    height:600px;
-    float:left;
+    width:100%;
+    height:100%;
 }
 
 .title
