--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,53 +1,48 @@
 <div id="div_main">
+  <canvas id="div_rendering_canvas"></canvas>
+  <div id="div_books_table">
+    <div class="title">your books</div>
+    <table>
+      <tr>
+        <th>n.</th><th>Title</th><th>Pages</th><th>Rate</th>
+      </tr>
 
-    <div id="div_books_table">
-      <div class="title">your books</div>
-
-      <table>
-        <tr>
-          <th>n.</th>
-          <th>Title</th>
-          <th>Pages</th>
-          <th>Rate</th>
-        </tr>
-
-        <% i=0; session[:owned_books].each do |book| %>
-            <tr>
-              <td><%= i; i = i+1  %></td>
-              <td><%= book.book_title %></td>
-              <td><%= book.book_num_pages %></td>
-              <td><%= book.book_average_rating %></td>
-            </tr>
-        <% end %>
-      </table>
-      <br/>
-    </div>
-    <canvas id="div_rendering_canvas"/>
-
+      <% i=0; session[:owned_books].each do |book| %>
+          <tr>
+            <td><%= i; i = i+1  %></td>
+            <td><%= book.book_title %></td>
+            <td><%= book.book_num_pages %></td>
+            <td><%= book.book_average_rating %></td>
+          </tr>
+      <% end %>
+    </table>
+  </div>
 </div>
 
 <script>
     $(document).ready(function() {
-        env3d_init(550.0, 600.0, "div_rendering_canvas");
-
         var books_entries =
-            [
-            <% i=0; session[:owned_books].each do |book|  %>
+                [
+                    <% i=0; session[:owned_books].each do |book|  %>
                     {
                         book_title:'<%= book.book_title %>',
                         book_num_pages:<%= book.book_num_pages != '' ? book.book_num_pages : 100 %>,
                         book_image_url:'<%= book.book_image_url %>'
                     }<%= (i < session[:owned_books].size - 1) ? "," : "" %>
                     <% i = i + 1 %>
-            <% end %>
-            ];
+                    <% end %>
+                ];
         console.log(books_entries);
 
-        loadBookcase("../billy.dae", function (loaded_object){
-            addBookCaseToScene(loaded_object) ;
-            disposeOnShelves(books_entries);
-            env3d_render();
-        });
+        env3d_init(1000.0, 600.0, "div_rendering_canvas");
+        loadEnvironmentModel("../environment.dae", function()
+            {
+                loadBookcaseTemplate("../bookcase.dae", function()
+                    {
+                        disposeOnShelves(books_entries);
+                        env3d_render();
+                    })
+            })
     });
 
 </script>
