--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,6 +19,9 @@
   </div>
 </div>
 
+<div style="position:fixed;top:10px; left:10px" id="div_log">
+
+</div>
 <script>
     $(document).ready(function() {
         var books_entries =
@@ -43,6 +46,6 @@
                         env3d_render();
                     })
             })
-    });
+         });
 
 </script>
