--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -6,8 +6,8 @@ body
 
 #div_main
 {
-    width:1000px;
-    height:600px;
+    /*width:1000px;*/
+    /*height:600px;*/
     margin-left: auto;
     margin-right: auto;
     position: relative;
@@ -15,6 +15,7 @@ body
 
 #div_books_table
 {
+    visibility: hidden;
     width:400px;
     height:400px;
     position: absolute;
