--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,29 +1,75 @@
 <div id="div_main">
-  <canvas id="div_rendering_canvas"></canvas>
-  <div id="div_books_table">
-    <div class="title">your books</div>
-    <table id="table_books">
-      <tr>
-        <th>Title</th><th>Pages</th><th>Avg. Rating</th>
-      </tr>
+  <div id="div_header">
+    <span class="title">On My Shelf</span>
+    <a class="logo" href="http://www.goodreads.com"> <img src="../gr_logo.jpg"/></a></span>
+  </div>
+  <div id="div_content">
+    <canvas id="div_rendering_canvas"></canvas>
+    <div id="div_books">
+      <div id="div_shelves_selector">
 
-      <% i=0; session[:owned_books].each do |book| %>
-          <tr id="<%= i %>">
-            <% i = i+1  %>
-            <td><%= book.book_title %></td>
-            <td><%= book.book_num_pages %></td>
-            <td><%= book.book_average_rating %></td>
-          </tr>
-      <% end %>
-    </table>
+      </div>
+      <!--<div id="div_books_table">-->
+      <!--<div class="title">your books</div>-->
+      <!--<table id="table_books">-->
+      <!--<tr>-->
+      <!--<th>Title</th><th>Pages</th><th>Avg. Rating</th>-->
+      <!--</tr>-->
+
+      <!--
+      <% i=0; session[:owned_books].each do |book| %>-->
+          <!--<tr id="<%= i %>">-->
+          <!--
+          <% i = i+1 %>-->
+          <!--<td><%= book.book_title %></td>-->
+          <!--<td><%= book.book_num_pages %></td>-->
+          <!--<td><%= book.book_average_rating %></td>-->
+          <!--</tr>-->
+          <!--
+      <% end %>-->
+      <!--</table>-->
+      <!--</div>-->
+      <div id="div_books_table">
+        <% i=0; session[:owned_books].each do |book| %>
+            <div id="<%= i %>" class="book_entry">
+              <div class="title"><%= book.book_title %></div>
+              <div class="author"><%= book.author_name %></div>
+              <span class="icons_list_left">
+               <img class="small_icon" src="../gr_icon.jpg"/>
+               <img class="small_icon" src="../info.gif"/>
+             </span>
+             <span class="icons_list_right">
+               <img class="small_icon" src="../lens.png"/>
+             </span>
+            </div>
+            <% i = i + 1 %>
+        <% end %>
+
+      </div>
+    </div>
   </div>
 </div>
 
-<div style="position:fixed;top:10px; left:10px" id="div_log">
+<!--<div id="0" class="book_entry">-->
+<!--<div class="title">Dress your family in corduroy and denim</div>-->
+<!--<div class="author">David Sedaris</div>-->
+<!--<span class="icons_list_left">-->
+<!--<img class="small_icon" src="../gr_icon.jpg"/>-->
+<!--<img class="small_icon" src="../info.gif"/>-->
+<!--</span>-->
+<!--<span class="icons_list_right">-->
+<!--<img class="small_icon" src="../lens.png"/>-->
+<!--</span>-->
+<!--</div>-->
 
-</div>
 <script>
-    $(document).ready(function() {
+    $('#div_books_table .book_entry').click(function (event) {
+        //alert($(this).attr('id')); //trying to alert id of the clicked row
+        clearHighlight();
+        highlightBook($(this).attr('id'));
+    });
+
+    $(document).ready(function () {
         var books_entries =
                 [
                     <% i=0; session[:owned_books].each do |book|  %>
@@ -37,21 +83,14 @@
                 ];
         console.log(books_entries);
 
-        env3d_init(1000.0, 600.0, "div_rendering_canvas");
-        loadEnvironmentModel("../environment.dae", function()
-            {
-                loadBookcaseTemplate("../bookcase.dae", function()
-                    {
-                        placeOnBookcases(books_entries);
-                        env3d_render();
-                    })
-            })
-         });
+        env3d_init(670, 570, "div_rendering_canvas");
 
-    $('#table_books tr').click(function (event) {
-        //alert($(this).attr('id')); //trying to alert id of the clicked row
-        clearHighlight();
-        highlightBook($(this).attr('id'));
+        loadEnvironmentModel("../environment.dae", function () {
+            loadBookcaseTemplate("../bookcase.dae", function () {
+                placeOnBookcases(books_entries);
+                env3d_render();
+            })
+        })
     });
 
 </script>
