--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,39 +1,73 @@
 body
 {
-    background-color: #cfabbd;
+   /*ackground-color: #cfabbd;*/
+    background-color: #3b3030;
+
+}
+
+#div_header
+{
+    width: 100%;
+    height: 5%;
+    background-color: #AAAAAA;
+    padding:10px;
+    margin-bottom: 5px;
+}
+
+#div_header .title
+{
+    color: #000000;
+    font-style: oblique;
+    font-size: 24px;
+    padding:10px;
+    float:left;
+}
+
+#div_header .logo
+{
+    height: 100%;
+    float: right;
+    padding:3px;
+}
+
+#div_content
+{
+    width: 100%;
+    height: 95%;
 
 }
 
 #div_main
 {
-    /*width:1000px;*/
-    /*height:600px;*/
+    width:1200px;
+    height:600px;
     margin-left: auto;
     margin-right: auto;
     position: relative;
 }
 
-#div_books_table
+#div_books
 {
-    width:400px;
-    height:400px;
-    position: absolute;
-    top: 20px;
-    right:20px;
-    background-color: #53bd48;
-    color: #000000;
-    font: message-box;
-
-    border: #000000;
-    border-width: 2px;
-    border-style: solid;
-    overflow: auto;
+    width:  33%;
+    height: 100%;
+    float: left;
 }
+
+#div_shelves_selector
+{
+    width:100%;
+    height:10%;
+    background-color: #AAAAAA;
+}
+
 
 #div_rendering_canvas
 {
-    width:100%;
+    width:65%;
     height:100%;
+    float: right;
+    border-width: 2px;
+    border-style: solid;
 }
 
 .title
@@ -42,3 +76,4 @@ body
     font-size: 18px;
     padding-bottom: 20px;
 }
+
