--- a/app/assets/stylesheets/books_table.css
+++ b/app/assets/stylesheets/books_table.css
@@ -3,7 +3,8 @@
     width:100%;
     height:90%;
 
-    background-color: #AAAAAA;
+    /*background-color: #AAAAAA;*/
+    background-color:#FFFFFF;
     color: #000000;
     font: message-box;
     overflow:  auto;
@@ -21,7 +22,8 @@
    margin-bottom: 5px;
    margin-left: 5px;
    margin-right:5px;
-   background-color: #aa7777;
+   /*background-color: #aa7777;*/
+    background-color: #FFFFFF;
    border-width: 2px;
    border-style: solid;
 }
