--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div id="div_header">
     <img class="logo" src="../logo.png"/>
     <span class="title">On My Shelf</span>
-    <span><a class="gr_logo" href="http://www.goodreads.com"> <img src="../gr_logo.jpg"/></a></span>
+    <!--<span><a class="gr_logo" href="http://www.goodreads.com"> <img src="../gr_logo.jpg"/></a></span>-->
   </div>
   <div id="div_content">
     <div id="div_render_viewport">
@@ -10,13 +10,10 @@
     </div>
     <div id="div_books">
       <div id="div_shelves_selector">
-        <select id="select_shelves" onchange="getShelf(this.value);">
-        <% session[:user_shelves].each_pair do |k, v| %>
-            <option value="<%= k %>"><%= v.shelf_name %></option>
-        <% end %>
-        </select>
+          <img onclick="prevShelf();" id="img_prev_shelf" src="/left_grey.png"/>
+          <span id="span_shelves_selector_name"></span>
+          <img onclick="nextShelf();" id="img_next_shelf" src="/right_grey.png"/>
       </div>
-
       <div id="div_books_table">
       </div>
     </div>
@@ -24,6 +21,12 @@
 </div>
 
 <script>
+    shelvesEntries =
+            [
+             <% i = 0; session[:user_shelves].each_pair do |k, v| %>
+                {id:<%= k %>, name:"<%= v.shelf_name %>"} <%= (i == session[:user_shelves].size-1)? "":"," %>
+             <% i = i + 1; end %>
+            ];
 
     $('#div_books_table .book_entry').click(function (event) {
         //alert($(this).attr('id')); //trying to alert id of the clicked row
@@ -39,8 +42,15 @@
         loadEnvironmentModel("../environment.dae", function () {
             loadBookcaseTemplate("../bookcase.dae", function () {
                 //placeOnBookcases(books_entries);
-
-                getShelf(0);
+                //find owned books shelf
+                for (var i = 0; i < shelvesEntries.length; i++)
+                {
+                    if (shelvesEntries[i].id == 0)
+                    {
+                        changeShelf(i);
+                        break;
+                    }
+                }
             })
         })
     });
