--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -36,6 +36,14 @@
 
     $(document).ready(function () {
 
+        if (!Detector.webgl)
+        {
+            $("#div_render_viewport").remove();
+            $("#div_shelves_selector").remove();
+            Detector.addGetWebGLMessage({parent: document.getElementById("div_content")});
+            return;
+        }
+
         env3d_init("canvas_render_viewport");
         $("#canvas_render_viewport").visibility = "hidden";
 
